<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/userlist"
                    android:textSize="20dp"/>

                <LinearLayout
                    android:id="@+id/tips"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:visibility="invisible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/this1"/>
                    <TextView
                        android:id="@+id/ranNum"
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:textColor="@color/red"
                        android:gravity="center"
                        android:text=""/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/this2"/>
                </LinearLayout>

            </LinearLayout>

            <ListView
                android:id="@+id/userList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null">
            </ListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_forgetWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgetWord"
                    android:visibility="visible"
                    android:layout_marginRight="50dp"/>

                <Button
                    android:id="@+id/btn_continueGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continueGame"
                    android:visibility="visible"
                    android:layout_marginLeft="50dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>